Fixed issue with central alignment of images in team.html of company page

--- a/04_Forms and Advanced CSS/Company_Site/css/main.css
+++ b/04_Forms and Advanced CSS/Company_Site/css/main.css
@@ -2,7 +2,6 @@
 
 body {
   background: url("../img/bg_body.gif") 50% 0 repeat;
-  margin:0px;
   font-family: Helvetica, Arial, sans-serif;
   text-align: center;
 }
@@ -46,9 +45,7 @@ main {
   display: block;
   text-align: center;
   /*font-family: "Nunito", Helvetica, Arial, sans-serif;*/
-  padding-right: 10%;
-  padding-left: 10%;
-  padding-top: 100px;
+  padding: 100px 10% 0 10%;
 }
 
 main article {
@@ -162,13 +159,11 @@ footer p {
 /* Team Page */
 
 .team-page main p {
-  list-style: none;
   margin-bottom: 130px;
 }
 
 .team-page main ul {
   list-style: none;
-  margin: 0 auto;
   padding-bottom: 235px;
 }
 
@@ -202,8 +197,8 @@ footer p {
 
 @media (max-width: 768px) {
   main {
-    padding-right: 40px;
-    padding-left: 40px;
+    padding-left: 0;
+    padding-right: 0;
     /*background-color: #e7e7e7;*/
   }
 
@@ -211,9 +206,31 @@ footer p {
     padding: 0;
   }
 
-  .team-page li img {
+  .team-page main p {
+    margin: 0 15px 20px 15px;
+  }
+
+  .team-page main ul {
+    display: table;
+    padding: 0;
     margin: 0 auto;
   }
+
+  .team-page main li {
+    width: 48%;
+    box-sizing: border-box;
+    padding-bottom: 30px;
+  }
+
+  .team-page main li a {
+    text-align: center;
+    width: 100%;
+  }
+
+  .team-page main li img {
+    margin: 0 auto;
+  }
+
 
   footer {
     padding-top: 0;
@@ -293,6 +310,11 @@ footer p {
 
   footer p {
     font-size: 16px;
+  }
+
+  .team-page li img {
+    margin: 0 auto;
+    width: 100%;
   }
 
 }
